--- a/Obilet.JourneyFinder/src/JourneyFinderMVC/Dockerfile
+++ b/Obilet.JourneyFinder/src/JourneyFinderMVC/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/JourneyFinder/JourneyFinder.csproj", "src/JourneyFinder/"]
-RUN dotnet restore "src/JourneyFinder/JourneyFinder.csproj"
+COPY ["src/JourneyFinderMVC/JourneyFinderMVC.csproj", "src/JourneyFinderMVC/"]
+RUN dotnet restore "src/JourneyFinderMVC/JourneyFinderMVC.csproj"
 COPY . .
-WORKDIR "/src/src/JourneyFinder"
-RUN dotnet build "./JourneyFinder.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/JourneyFinderMVC"
+RUN dotnet build "./JourneyFinderMVC.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./JourneyFinder.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./JourneyFinderMVC.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "JourneyFinder.dll"]
+ENTRYPOINT ["dotnet", "JourneyFinderMVC.dll"]
