--- a/Obilet.JourneyFinder/src/Middlewares/Middlewares.csproj
+++ b/Obilet.JourneyFinder/src/Middlewares/Middlewares.csproj
@@ -13,8 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
       <ProjectReference Include="..\Repositories\Repositories.csproj" />
+      <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
 </Project>
