Get setting variables from appsettings

--- a/Obilet.JourneyFinder/src/JourneyFinderMVC/appsettings.json
+++ b/Obilet.JourneyFinder/src/JourneyFinderMVC/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ObiletApi": {
+    "BaseUrl": "https://v2-api.obilet.com/",
+    "ApiToken": "JEcYcEMyantZV095WVc3G2JtVjNZbWx1",
+    "Language": "tr-TR",
+    "SessionExpirationDays": 1
+  }
 }
